# logcafe

./: README.md  logcafe.toml  pyproject.toml
src/logcafe/: config.py  main.py  schemas.py  utils.py  watch.py
src/logcafe/tcss/: app.tcss
